--- a/chat-room-backend/package.json
+++ b/chat-room-backend/package.json
@@ -28,6 +28,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "nestjs-i18n": "^10.4.5",
+    "nodemailer": "^6.9.14",
     "redis": "^4.7.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
