--- a/chat-room-backend/.env
+++ b/chat-room-backend/.env
@@ -5,3 +5,5 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="mysql://root:root1234@localhost:3306/chat-room?schema=public"
+JWT_SECRET='test'
+JWT_EXPIRES_IN='1h'
