--- a/chat-room-frontend/package.json
+++ b/chat-room-frontend/package.json
@@ -8,6 +8,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ant-design/icons": "^5.4.0",
     "antd": "^5.20.1",
     "axios": "^1.7.3",
     "react": "^18.0.0",
