--- a/chat-room-backend/package.json
+++ b/chat-room-backend/package.json
@@ -26,15 +26,20 @@
     "@nestjs/jwt": "^10.2.0",
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^8.0.0",
+    "@nestjs/platform-socket.io": "^8.4.7",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "minio": "^8.0.1",
+    "nest-winston": "^1.9.7",
     "nestjs-i18n": "^10.4.5",
     "nodemailer": "^6.9.14",
     "redis": "^4.7.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^7.2.0"
+    "rxjs": "^7.2.0",
+    "socket.io": "^4.7.5",
+    "winston": "^3.14.1",
+    "winston-daily-rotate-file": "^5.0.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^8.0.0",
