--- a/chat-room-frontend/package.json
+++ b/chat-room-frontend/package.json
@@ -13,12 +13,14 @@
     "axios": "^1.7.3",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
-    "react-router-dom": "^6.26.0"
+    "react-router-dom": "^6.26.0",
+    "socket.io-client": "^4.7.5"
   },
   "devDependencies": {
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "@vitejs/plugin-react": "^1.3.0",
+    "sass": "^1.77.8",
     "vite": "^2.9.9"
   }
 }
