--- a/chat-room-frontend/package.json
+++ b/chat-room-frontend/package.json
@@ -9,6 +9,8 @@
   },
   "dependencies": {
     "@ant-design/icons": "^5.4.0",
+    "@emoji-mart/data": "^1.2.1",
+    "@emoji-mart/react": "^1.1.1",
     "antd": "^5.20.1",
     "axios": "^1.7.3",
     "react": "^18.0.0",
