--- a/chat-room-backend/package.json
+++ b/chat-room-backend/package.json
@@ -10,7 +10,7 @@
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
-    "start:dev": "nest start --watch",
+    "start:dev": "cross-env NODE_ENV=development nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
@@ -22,6 +22,7 @@
   },
   "dependencies": {
     "@nestjs/common": "^8.0.0",
+    "@nestjs/config": "^3.2.3",
     "@nestjs/core": "^8.0.0",
     "@nestjs/jwt": "^10.2.0",
     "@nestjs/mapped-types": "*",
@@ -29,6 +30,8 @@
     "@nestjs/platform-socket.io": "^8.4.7",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "cross-env": "^7.0.3",
+    "js-yaml": "4.1.0",
     "minio": "^8.0.1",
     "nest-winston": "^1.9.7",
     "nestjs-i18n": "^10.4.5",
@@ -48,6 +51,7 @@
     "@prisma/client": "^5.12.1",
     "@types/express": "^4.17.13",
     "@types/jest": "27.5.0",
+    "@types/js-yaml": "^4.0.9",
     "@types/node": "^16.0.0",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
